[gd_scene format=3 uid="uid://bhbhqice3et0g"]

[ext_resource type="PackedScene" uid="uid://c5r4oetk0gcbo" path="res://scenes/Room1.tscn" id="1_lnu2h"]
[ext_resource type="PackedScene" uid="uid://dfj3fl6ejphd" path="res://scenes/player.tscn" id="2_yqjtg"]
[ext_resource type="Script" uid="uid://bdbeujpk0bvmi" path="res://scripts/ui.gd" id="3_lnu2h"]

[node name="Node2D" type="Node2D" unique_id=572378975]

[node name="Room1" parent="." unique_id=727619741 instance=ExtResource("1_lnu2h")]
position = Vector2(0, 0)

[node name="Player" parent="." unique_id=180648449 instance=ExtResource("2_yqjtg")]
position = Vector2(-2, 2)

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1627827847]
process_mode = 3
layer = 100
follow_viewport_enabled = true
script = ExtResource("3_lnu2h")

[node name="Control" type="Control" parent="CanvasLayer" unique_id=1736438439]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" type="Control" parent="CanvasLayer/Control" unique_id=1373745701]
visible = false
anchors_preset = 0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/Menu" unique_id=882994856]
layout_mode = 0
offset_left = -288.99997
offset_top = -162.0
offset_right = -173.59998
offset_bottom = -97.600006
scale = Vector2(5, 5)
color = Color(0.15294118, 0.15294118, 0.15294118, 0.58431375)

[node name="Label" type="Label" parent="CanvasLayer/Control/Menu" unique_id=12081559]
layout_mode = 0
offset_left = -57.0
offset_top = -90.0
offset_right = 58.0
offset_bottom = -70.0
text = "THE OFFICE"

[node name="Label2" type="Label" parent="CanvasLayer/Control/Menu" unique_id=1645493798]
layout_mode = 0
offset_left = -82.0
offset_top = 98.0
offset_right = 82.0
offset_bottom = 141.0
text = "BEST: 00:00:00"
horizontal_alignment = 1

[node name="Button" type="Button" parent="CanvasLayer/Control/Menu" unique_id=1289137885]
layout_mode = 0
offset_left = -44.0
offset_top = -15.0
offset_right = 45.0
offset_bottom = 13.0
text = "PLAY"

[node name="HUD" type="Control" parent="CanvasLayer/Control" unique_id=690634180]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/HUD" unique_id=966586489]
layout_mode = 0
offset_left = -46.999977
offset_top = -154.99997
offset_right = -28.399979
offset_bottom = -150.79997
scale = Vector2(5, 5)
color = Color(0.15294118, 0.15294118, 0.15294118, 0.58431375)

[node name="TimeLabel" type="Label" parent="CanvasLayer/Control/HUD" unique_id=336572749]
layout_mode = 0
offset_left = -65.0
offset_top = -154.0
offset_right = 67.0
offset_bottom = -133.0
text = "00:00:00"
horizontal_alignment = 1

[node name="Pause" type="Control" parent="CanvasLayer/Control" unique_id=206337002]
visible = false
anchors_preset = 0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/Pause" unique_id=2134172942]
layout_mode = 0
offset_left = -287.0
offset_top = -161.0
offset_right = -172.20001
offset_bottom = -96.600006
scale = Vector2(5, 5)
color = Color(0.15294118, 0.15294118, 0.15294118, 0.58431375)

[node name="Label" type="Label" parent="CanvasLayer/Control/Pause" unique_id=1661318239]
layout_mode = 0
offset_left = -56.0
offset_top = -86.0
offset_right = 59.000008
offset_bottom = -66.0
text = "PAUSED"
horizontal_alignment = 1

[node name="Button" type="Button" parent="CanvasLayer/Control/Pause" unique_id=2038716739]
layout_mode = 0
offset_left = -52.999992
offset_top = -7.0
offset_right = 55.000008
offset_bottom = 21.0
text = "CONTINUE"

[node name="Button2" type="Button" parent="CanvasLayer/Control/Pause" unique_id=1709474996]
layout_mode = 0
offset_left = -52.999992
offset_top = 28.0
offset_right = 55.000008
offset_bottom = 56.0
text = "EXIT"
